FIX: Change tools z-index

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -74,7 +74,7 @@ body{
             border: 2px solid #000;
             padding: 10px;
             background-color: #fff;
-            z-index: 10;
+            z-index: 99;
           }
           
           .hamburger__bars {
@@ -133,6 +133,7 @@ body{
           height: 100vh;
           z-index: 1;
           transition: left .5s; 
+          z-index: 98;
           ul{
             list-style: none;
             position: relative;
