--- a/scss/style.css
+++ b/scss/style.css
@@ -95,7 +95,7 @@ body header .hamburger__container {
   border: 2px solid #000;
   padding: 10px;
   background-color: #fff;
-  z-index: 10;
+  z-index: 99;
 }
 
 body header .hamburger__bars {
@@ -172,6 +172,7 @@ body header .navigation {
   z-index: 1;
   -webkit-transition: left .5s;
   transition: left .5s;
+  z-index: 98;
 }
 
 body header .navigation ul {
